# provoit-back

./: .gitignore  Cargo.toml  Rocket.toml  docker-compose.yml
.github/workflows/: ci.yml
src/: auth.rs  cors.rs  database.rs  main.rs  routes.rs
src/routes/: auth.rs  timings.rs  trips.rs  users.rs  vehicles.rs  version.rs
