[package]
name = "provoit-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.4", features = ["mysql"] }
provoit-types = { git = "https://github.com/Provoit/provoit-types.git", version = "0.1.0", features = ["diesel"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["diesel_mysql_pool"] }

[profile.release]
strip = true
lto = true
