[package]
name = "provoit-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.0.4", features = ["mysql", "chrono"] }
provoit-types = { git = "https://github.com/Provoit/provoit-types.git", version = "0.1.0", features = ["diesel"] }
rand = "0.8.5"
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["diesel_mysql_pool"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
sha2 = "0.10.6"
base16ct = { version = "0.2.0", features = ["alloc"] }

[profile.release]
strip = true
lto = true
